--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -1,3 +1,16 @@
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
+
+html {
+    font-size: 62.5%;
+}
+
 body {
-    background-color: black;
+    box-sizing: border-box;
+    background-color: #18191A;
 }
