--- a/css/style.css
+++ b/css/style.css
@@ -1,2 +1,57 @@
+.nav {
+  background-color: #242526;
+  width: 100vw;
+  height: 8.5vh;
+  display: flex;
+  overflow: hidden;
+  align-items: center;
+  justify-items: center;
+  padding-top: 0.6%; }
+  .nav-search-box {
+    width: 24.2%;
+    height: 5rem;
+    display: grid;
+    grid-template-rows: 100%;
+    grid-template-columns: 20% 70%; }
+    .nav-search-box--logo {
+      width: 4rem;
+      height: 4rem;
+      margin-left: 0.7rem; }
+      .nav-search-box--logo--search-box {
+        background-color: #3A3B3C;
+        height: 4rem;
+        width: 27rem;
+        outline: none;
+        border: none;
+        border-radius: 25px;
+        -webkit-border-radius: 25px;
+        -moz-border-radius: 25px;
+        -ms-border-radius: 25px;
+        -o-border-radius: 25px;
+        padding: 2rem;
+        display: inline;
+        padding-left: 4rem;
+        color: #E4E6EB;
+        font-size: 1.5rem; }
+        .nav-search-box--logo--search-box::placeholder {
+          color: #A7B1AC;
+          font-family: 'Roboto', sans-serif;
+          font-size: 1.6rem; }
+        .nav-search-box--logo--search-box--icon {
+          position: absolute;
+          fill: #A7B1AC;
+          left: 3rem; }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%; }
+
 body {
-  background-color: black; }
+  box-sizing: border-box;
+  background-color: #18191A; }
