--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,4 @@
 @import"layout/navbar.scss";
 @import"base/base.scss";
-@import "base/variables.scss"
+@import "base/variables.scss";
+@import"extra/extra.scss";
