--- a/css/style.css
+++ b/css/style.css
@@ -5,14 +5,14 @@
   display: flex;
   overflow: hidden;
   align-items: center;
-  justify-items: center;
-  padding-top: 0.6%; }
+  justify-items: center; }
   .nav-search-box {
     width: 24.2%;
     height: 5rem;
     display: grid;
     grid-template-rows: 100%;
-    grid-template-columns: 20% 70%; }
+    grid-template-columns: 20% 70%;
+    padding-top: 0.4%; }
     .nav-search-box--logo {
       width: 4rem;
       height: 4rem;
@@ -40,7 +40,76 @@
         .nav-search-box--logo--search-box--icon {
           position: absolute;
           fill: #A7B1AC;
-          left: 3rem; }
+          left: 8rem;
+          top: 2rem; }
+
+.icon-box {
+  width: 53.7rem;
+  margin-left: 5.8rem;
+  height: 4rem;
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: repeat(5, 20%); }
+  .icon-box-con {
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    align-content: center;
+    justify-content: center;
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+    .icon-box-con:hover {
+      background-color: #4d4f50;
+      transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+      -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+    .icon-box-con--icon {
+      fill: #b0b3b8; }
+
+.porfile-box {
+  border-radius: 25px;
+  -webkit-border-radius: 25px;
+  -moz-border-radius: 25px;
+  -ms-border-radius: 25px;
+  -o-border-radius: 25px;
+  width: 9.5rem;
+  height: 3.1rem;
+  margin-left: 6.5rem;
+  display: flex;
+  transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1); }
+  .porfile-box:hover {
+    transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -moz-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -ms-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    -o-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
+    background-color: #4d4f50; }
+  .porfile-box--circle {
+    fill: transparent;
+    padding-left: 0.2rem;
+    padding-top: 0.1rem; }
+    .porfile-box--circle--name {
+      font-family: 'Segoe UI', sans-serif;
+      font-weight: bolder;
+      font-size: 1.3rem;
+      text-overflow: ellipsis;
+      color: #E4E6EB;
+      padding-left: 1rem;
+      padding-top: 0.4rem; }
 
 *,
 *::after,
@@ -55,3 +124,12 @@ html {
 body {
   box-sizing: border-box;
   background-color: #18191A; }
+
+.active {
+  fill: #2374e1 !important; }
+
+.active-bottom {
+  border-bottom: 2px solid #2374e1;
+  border-bottom-left-radius: 0%; }
+  .active-bottom:hover {
+    background-color: transparent; }
