--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@
 
 .icon-box {
   width: 53.7rem;
-  margin-left: 5.8rem;
+  margin-left: 9rem;
   height: 4rem;
   display: grid;
   grid-template-rows: 100%;
@@ -84,7 +84,7 @@
   -o-border-radius: 25px;
   width: 9.5rem;
   height: 3.1rem;
-  margin-left: 6.5rem;
+  margin-left: 8.4rem;
   display: flex;
   transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
   -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1);
@@ -100,7 +100,7 @@
     background-color: #4d4f50; }
   .porfile-box--circle {
     fill: transparent;
-    padding-left: 0.2rem;
+    padding-left: 0.3rem;
     padding-top: 0.1rem; }
     .porfile-box--circle--name {
       font-family: 'Segoe UI', sans-serif;
@@ -109,7 +109,25 @@
       text-overflow: ellipsis;
       color: #E4E6EB;
       padding-left: 1rem;
-      padding-top: 0.4rem; }
+      padding-top: 0.6rem; }
+
+.user-select {
+  border: 3px solid violet;
+  width: 20rem;
+  height: 100%;
+  margin-left: 1rem;
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: repeat(4, 25%); }
+  .user-select--profile-box {
+    border-radius: 50%;
+    background-color: #3a3b3c;
+    width: 4rem;
+    height: 4rem;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%; }
 
 *,
 *::after,
@@ -133,3 +151,7 @@ body {
   border-bottom-left-radius: 0%; }
   .active-bottom:hover {
     background-color: transparent; }
+
+.hide-me {
+  visibility: hidden;
+  display: none; }
