--- a/sass/base/base.scss
+++ b/sass/base/base.scss
@@ -13,4 +13,24 @@ html {
 body {
     box-sizing: border-box;
     background-color: #18191A;
+    & {
+        scrollbar-width: auto;
+        scrollbar-color: transparent transparent
+    }
+    /* Chrome, Edge, and Safari */
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    &::-webkit-scrollbar-track {
+        background: transparent;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: grey;
+        border-radius: 10px;
+        border: 3px solid transparent;
+        -webkit-border-radius: 10px;
+        -moz-border-radius: 10px;
+        -ms-border-radius: 10px;
+        -o-border-radius: 10px;
+    }
 }
