--- a/sass/layout/navbar.scss
+++ b/sass/layout/navbar.scss
@@ -82,6 +82,9 @@
         }
         &--icon {
             fill: #b0b3b8;
+             :hover {
+                cursor: pointer;
+            }
         }
     }
 }
@@ -132,6 +135,30 @@
     display: grid;
     grid-template-rows: 100%;
     grid-template-columns: repeat(4, 25%);
+    &--messenger-box {
+        border-radius: 50%;
+        background-color: #3a3b3c;
+        width: 4rem;
+        height: 4rem;
+        -webkit-border-radius: 50%;
+        -moz-border-radius: 50%;
+        -ms-border-radius: 50%;
+        -o-border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-items: center;
+        align-content: center;
+        justify-content: center;
+        margin-top: 0.5rem;
+        &--icon {
+            fill: #E4E6EB;
+            width: 2rem;
+            height: 2rem;
+             :hover {
+                cursor: pointer;
+            }
+        }
+    }
     &--menu-box {
         border-radius: 50%;
         background-color: #3a3b3c;
@@ -151,6 +178,9 @@
             fill: #E4E6EB;
             width: 2rem;
             height: 2rem;
+             :hover {
+                cursor: pointer;
+            }
         }
     }
 }
@@ -171,6 +201,7 @@
     right: 2.5Rem;
     z-index: 100;
     border: 1PX solid grey;
+    visibility: hidden;
     & {
         scrollbar-width: auto;
         scrollbar-color: transparent transparent
@@ -276,6 +307,9 @@
             margin-top: 2.5rem;
             margin-left: 2.7rem;
             position: absolute;
+             :hover {
+                cursor: pointer;
+            }
         }
     }
 }
@@ -300,7 +334,7 @@
         margin-left: 0.7rem;
         margin-top: 1rem;
         &:hover {
-            background-color: #4d4f50;
+            background-color: rgba(77, 79, 80, 0.7);
             transition: all .2s linear;
             -webkit-transition: all .2s linear;
             -moz-transition: all .2s linear;
@@ -440,7 +474,7 @@
 
 .create-con {
     width: 88%;
-    height: 77%;
+    height: 83%;
     margin-left: 2rem;
     margin-top: 1rem;
     background-color: #242526;
@@ -480,12 +514,12 @@
     &--grid {
         margin-top: 1rem;
         display: grid;
-        grid-template-rows: repeat(7, 12.6%);
+        grid-template-rows: repeat(8, 11.2%);
         grid-template-columns: 100%;
         width: 100%;
         height: 100%;
         &-box {
-            margin-top: 0.3rem;
+            margin-top: -0.5rem;
             width: 90%;
             height: 93%;
             display: flex;
@@ -509,33 +543,154 @@
                 -moz-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                 -ms-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
                 -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
-                background-color: #4d4f50;
+                background-color: rgba(77, 79, 80, 0.7);
             }
             &--con {
-                width: 3.6rem;
-                height: 3.6rem;
+                width: 3.8rem;
+                height: 3.8rem;
                 background-color: #3A3B3C;
                 border-radius: 50%;
                 -webkit-border-radius: 50%;
                 -moz-border-radius: 50%;
                 -ms-border-radius: 50%;
                 -o-border-radius: 50%;
-                margin-left: 0.4rem;
+                margin-left: 1rem;
                 &--icon {
-                    margin-left: 0.8rem;
-                    margin-top: 0.7rem;
+                    margin-left: 0.9rem;
+                    margin-top: 0.9rem;
                     -webkit-filter: invert(89%) sepia(6%) hue-rotate(185deg);
+                     :hover {
+                        cursor: pointer;
+                    }
                     &--name {
-                        top: -1.8rem;
+                        top: -2rem;
                         position: relative;
                         color: #E4E6EB;
                         font-family: 'Roboto', sans-serif;
                         font-weight: bolder;
                         left: 5rem;
-                        font-size: 1.4rem;
+                        font-size: 1.5rem;
                     }
                 }
             }
+        }
+    }
+}
+
+.create-loader-con {
+    display: flex;
+    align-items: center;
+    justify-items: center;
+    &--header {
+        display: flex;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        justify-items: center;
+        &--img {
+            top: 40.5rem;
+            left: 34rem;
+            height: 36px;
+            width: 36px;
+            background: #656871;
+            border-radius: 50%;
+            position: absolute;
+            overflow: hidden;
+            display: block;
+            &:before {
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                -ms-border-radius: 50%;
+                -o-border-radius: 50%;
+                -webkit-border-radius: 50%;
+                -moz-border-radius: 50%;
+                -ms-border-radius: 50%;
+                -o-border-radius: 50%;
+                position: absolute;
+                content: "";
+                height: 100%;
+                width: 100%;
+                background-image: linear-gradient(to right, #656871 0%, #888b94 20%, #656871 40%, #656871 100%);
+                background-repeat: no-repeat;
+                background-size: 450px 400px;
+                animation: shimmer 4s linear infinite;
+                background-size: 650px 600px;
+                -webkit-animation: shimmer 4s linear infinite;
+            }
+            &--detail {
+                &--name {
+                    left: 7rem;
+                    top: -0.8rem;
+                    height: 1.2rem;
+                    width: 7rem;
+                    background: #656871;
+                    border-radius: 1rem;
+                    position: relative;
+                    overflow: hidden;
+                    display: inline-block;
+                    -webkit-border-radius: 1rem;
+                    -moz-border-radius: 1rem;
+                    -ms-border-radius: 1rem;
+                    -o-border-radius: 1rem;
+                    &:before {
+                        border-radius: 1rem;
+                        position: absolute;
+                        content: "";
+                        height: 100%;
+                        width: 100%;
+                        background-image: linear-gradient(to right, #656871 0%, #888b94 20%, #656871 40%, #656871 100%);
+                        background-repeat: no-repeat;
+                        background-size: 450px 400px;
+                        animation: shimmer 4s linear infinite;
+                        background-size: 650px 600px;
+                        -webkit-animation: shimmer 4s linear infinite;
+                    }
+                }
+            }
+        }
+    }
+}
+
+.messenger-con {
+    width: 36rem;
+    height: 50rem;
+    overflow: hidden;
+    background-color: #242526;
+    border-radius: 7px;
+    -webkit-border-radius: 7px;
+    -moz-border-radius: 7px;
+    -ms-border-radius: 7px;
+    -o-border-radius: 7px;
+    overflow-x: hidden;
+    position: absolute;
+    top: 4.6REM;
+    right: 2.5Rem;
+    z-index: 100;
+    border: 1PX solid grey;
+    &--top-grid {
+        grid-template-columns: 60% repeat(4, 10%);
+        grid-template-rows: 100%;
+        display: grid;
+        display: flex;
+        margin-top: 1rem;
+        width: 100%;
+        height: 10%;
+        &--icon-box {
+            top: -3.5rem;
+            left: 19rem;
+            position: relative;
+            &--icon {
+                margin-left: 1rem;
+                -webkit-filter: invert(62%) sepia(98%) saturate(12%) hue-rotate(175deg) brightness(90%) contrast(96%);
+            }
+        }
+        &--name {
+            font-size: 2.5rem;
+            color: #E4E6EB;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 600;
+            margin-left: 1.5rem;
+            margin-top: 0.7rem;
         }
     }
 }
